# bible-reading-plans

./: .gitignore  CHANGELOG.md  PKGBUILD  README.md  index.html  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BibleBrowser.tsx  BibleReader.tsx  DailyView.tsx  Header.tsx  PlanView.tsx  ReadView.tsx  ReadingCard.tsx  SettingsPanel.tsx
src/components/journal/: JournalBookBrowse.tsx  JournalDateBrowse.tsx  JournalDateView.tsx  JournalEditor.tsx  JournalEntryCard.tsx  JournalPane.tsx  JournalView.tsx  TagBadge.tsx  TagFilter.tsx  TagInput.tsx
src/data/: bibleBooks.ts  fonts.ts  hornerLists.ts  mcheyneCalendar.ts  mcheyneCalendarRaw.ts  mcheyneLists.ts  plans.ts
src/fonts/: linguistics-pro.css
src/hooks/: useAvailableTags.ts  useBiblePreferences.ts  useBibleReader.ts  useJournal.ts  useJournalBrowser.ts  useReadingPlan.ts
src/types/: journal.ts
src/utils/: bibleApi.ts  bibleCache.ts  bibleLinks.ts  bibleOrder.ts  calendarPlanGenerator.ts  frontmatter.ts  journalFs.ts  journalRender.ts  planGenerator.ts  tagUtils.ts  vaultGenerator.ts
